--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel ="stylesheet" href = "styles.css">
 </head>
 <body>
-<h1>Demo Project : Master</h1>
+<h1>Demo Project : tempBranch</h1>
 
 </body>
 </html>
