file edited with tag v1.1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <h1>Demo Project : tempBranch</h1>
 <h2> changes done in tempBranch</h2>
+<h2> Add tag to branch v1.1</h2>
 
 </body>
 </html>
